2007-01-04 [wwp]	2.6.1cvs104

	* src/image_viewer.c
		Force operator precedence (fix a compiler warning).

2007-01-04 [colin]	2.6.1cvs103

	* src/image_viewer.c
		Be cautious there too (same fix as the one
		in textview from cvs33)
	* src/messageview.c
		Don't use any MimeViewer plugin when showing
		all headers

2007-01-03 [wwp]	2.6.1cvs102

	* src/html.c
	* src/html.h
		fixed "cent" sign (use the existing ASCII one),
		decode more HTML entities,
		converted table ASCII entries to UTF-8,
		moved a switch() into a hashtable.

2007-01-03 [paul]	2.6.1cvs101

	* src/compose.c
	* src/messageview.c
	* src/procmsg.c
	* src/procmsg.h
		When possible, use move_msg instead of
		copy_msg + remove_msg to move sent mail
		from Queue to Sent. 

2007-01-03 [paul]	2.6.1cvs100

	* src/html.c
		add more html entity recognition:
		pounds, euros, and cents

2007-01-03 [colin]	2.6.1cvs99

	* src/imap_gtk.c
		Don't display an error on NOSELECT
		folders when synchronising

2007-01-03 [paul]	2.6.1cvs98

	* tools/maildir2claws-mail.pl
		only substitute 'sent-mail' if it's
		the full directory name

2007-01-03 [paul]	2.6.1cvs97

	* ChangeLog
	* ChangeLog.pre2.0.0
	* Makefile.am
		archive a chunk of ChangeLog in
		ChangeLog.pre2.0.0
	* ChangeLog.gtk1
	* doc/src/ChangeLog.claws-pre0.8.0
		remove ChangeLog.claws-pre0.8.0, adding
		its contents to ChangeLog.gtk1

2007-01-03 [paul]	2.6.1cvs96

	* src/account.c
	* src/account.h
	* src/action.c
	* src/action.h
	* src/adbookbase.h
	* src/addr_compl.c
	* src/addr_compl.h
	* src/addrbook.c
	* src/addrcache.c
	* src/addrcache.h
	* src/addrcindex.c
	* src/addrcindex.h
	* src/addrclip.c
	* src/addrclip.h
	* src/addrdefs.h
	* src/addressadd.c
	* src/addressadd.h
	* src/addressbook.c
	* src/addressbook.h
	* src/addressbook_foldersel.c
	* src/addressbook_foldersel.h
	* src/addrgather.c
	* src/addrgather.h
	* src/addrharvest.c
	* src/addrharvest.h
	* src/addrindex.c
	* src/addrindex.h
	* src/addritem.c
	* src/addritem.h
	* src/addrquery.c