@@ -2212,3 +2212,4 @@
 ( cvs diff -u -r 1.12.2.19 -r 1.12.2.20 src/html.c;  cvs diff -u -r 1.3.2.7 -r 1.3.2.8 src/html.h;  ) > 2.6.1cvs102.patchset
 ( cvs diff -u -r 1.1.2.13 -r 1.1.2.14 src/image_viewer.c;  cvs diff -u -r 1.94.2.114 -r 1.94.2.115 src/messageview.c;  ) > 2.6.1cvs103.patchset
 ( cvs diff -u -r 1.1.2.14 -r 1.1.2.15 src/image_viewer.c;  ) > 2.6.1cvs104.patchset
+( cvs diff -u -r 1.3.2.9 -r 1.3.2.10 src/common/quoted-printable.c;  ) > 2.6.1cvs105.patchset
