@@ -1,3 +1,10 @@
+2007-01-04 [colin]	2.6.1cvs105
+
+	* src/common/quoted-printable.c
+		Fix bug 1089, 'NUL characters in Subject 
+		line are misinterpreted'. Not a pain to
+		fix in fact.
+
 2007-01-04 [wwp]	2.6.1cvs104
 
 	* src/image_viewer.c
